# Card-Game

./: .CMakeLists.txt.swp  .IHandler.h.swp  .helper.h.swp  CMakeLists.txt  CardGame.cpp  CardGame.h  CommunicatorLocal.h  HandLocal.h  HandlerLocal.h  ICard.h  IClient.h  ICommuicatorStorage.h  ICommunicator.h  IGame.h  IGameStorage.h  IHand.h  IHandler.h  IPlayer.h  IPlayerContainer.h  IServer.h  PlayerLocal.cpp  README.md  ServerLocal.cpp  ServerLocal.h  TODO.md  a.out  helper.cpp  helper.h  main.cpp  test_UnoCard.cpp  test_helper.cpp
include/: .CardGame.h.swp  .Deck.h.swp  .HandLocal.h.swp  .IClient.h.swp  .IHandler.h.swp  .IPlayer.h.swp  .IPlayerContainer.h.swp  .IServer.h.swp  .Player.h.swp  .PlayerContainer.h.swp  .PlayerLocal.h.swp  .Server.h.swp  .UnoCard.h.swp  .UnoTopCard.h.swp  :wq  CardGame.h  Client.h  Connection.h  Deck.h  Hand.h  HandLocal.h  HandlerLocal.h  ICard.h  IClient.h  IConnection.h  IDeck.h  IGame.h  IHand.h  IHandler.h  IPlayer.h  IPlayerContainer.h  IServer.h  Player.h  PlayerContainer.h  PlayerLocal.h  Server.h  Testing.h  TopCard.h  UnoCard.h  UnoTopCard.h
src/: .CMakeLists.txt.swp  .CardGame.cpp.swp  .Deck.cpp.swp  .Hand.cpp.swp  .HandLocal.cpp.swp  .HandlerLocal.cpp.swp  .PlayerContainer.cpp.swp  .PlayerLocal.cpp.swp  .Server.cpp.swp  .UnoCard.cpp.swp  .UnoTopCard.cpp.swp  CMakeLists.txt  CardGame.cpp  CardGame.h  Deck.cpp  Hand.cpp  HandLocal.cpp  HandLocal.h  HandlerLocal.cpp  HandlerLocal.h  ICard.h  IClient.h  IDeck.h  IGame.h  IHand.h  IHandler.h  IPlayer.h  Player.cpp  PlayerContainer.cpp  PlayerLocal.cpp  PlayerLocal.h  Server.cpp  Server.h  ServerLocal.cpp  TopCard.cpp  UnoCard.cpp  UnoTopCard.cpp  \  a.out  main.cpp
tests/: .CMakeLists.txt.swp  .test_Local.cpp.swp  CMakeLists.txt  helper.cpp  test_Local.cpp  test_UnoCard.cpp  test_helper.cpp  test_testing.cpp
